data_structures/charts/traefik-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: financial
  labels:
    app: financial-app
spec:
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
  selector:
    app: traefik
  type: LoadBalancer
